{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 54,
  "lineage": "860f8e40-f615-744d-3eea-c2bda449f58d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "fwpolicy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/azureFirewalls/testfirewall"
            ],
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/firewallPolicies/fwpolicy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [
              {
                "mode": "Deny",
                "private_ranges": [],
                "signature_overrides": [],
                "traffic_bypass": []
              }
            ],
            "location": "northeurope",
            "name": "fwpolicy",
            "private_ip_ranges": [],
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "rule_collection_groups": [],
            "sku": "Premium",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "fw-subnet-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/networkSecurityGroups/nsg-fw-subnet",
            "location": "northeurope",
            "name": "nsg-fw-subnet",
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow all for test",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "gw-subnet-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/networkSecurityGroups/nsg-gw-subnet",
            "location": "northeurope",
            "name": "nsg-gw-subnet",
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow all for test",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-1-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow all for test",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/networkSecurityGroups/nsg-fw-subnet/securityRules/rule1",
            "name": "rule1",
            "network_security_group_name": "nsg-fw-subnet",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.fw-subnet-nsg",
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-1-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow all for test",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/networkSecurityGroups/nsg-gw-subnet/securityRules/rule1",
            "name": "rule1",
            "network_security_group_name": "nsg-gw-subnet",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.gw-subnet-nsg",
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fwpubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/publicIPAddresses/fwpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.166.172.100",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "fwpip",
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "deployment": "tf",
              "stage": "dev"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpnpubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/publicIPAddresses/vpnpubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.166.172.102",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vpnpubip",
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "deployment": "tf",
              "stage": "dev"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewallsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/virtualNetworks/VNET-Hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "virtual_network_name": "VNET-Hub"
          },
          "dependencies": [
            "azurerm_resource_group.rghubnetworking",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gatewaysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/virtualNetworks/VNET-Hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "virtual_network_name": "VNET-Hub"
          },
          "dependencies": [
            "azurerm_resource_group.rghubnetworking",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d097f0a5-2908-4736-8cd9-80ea98848940",
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/virtualNetworks/VNET-Hub",
            "location": "northeurope",
            "name": "VNET-Hub",
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/virtualNetworks/VNET-Hub/subnets/GatewaySubnet",
                "name": "GatewaySubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/virtualNetworks/VNET-Hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "deployment": "tf",
              "stage": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rghubnetworking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.1.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "20.166.172.102"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/virtualNetworkGateways/VPN-GW-1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/publicIPAddresses/vpnpubip",
                "subnet_id": "/subscriptions/05e45818-2478-475f-87d8-4c8cf13455c0/resourceGroups/RG_BP_HUB_Vnet_Dev/providers/Microsoft.Network/virtualNetworks/VNET-Hub/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "northeurope",
            "name": "VPN-GW-1",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "RG_BP_HUB_Vnet_Dev",
            "sku": "VpnGw1AZ",
            "tags": {
              "deployment": "tf",
              "stage": "dev"
            },
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_client_configuration": [
              {
                "address_space": [
                  "192.168.0.0/24"
                ],
                "revoked_certificate": [
                  {
                    "name": "Verizon-Global-Root-CA",
                    "thumbprint": "912198EEF23DCAC40939312FEE97DD560BAE49B1"
                  }
                ],
                "root_certificate": [
                  {
                    "name": "DigiCert-Federated-ID-Root-CA",
                    "public_cert_data": "    MIIDuzCCAqOgAwIBAgIQCHTZWCM+IlfFIRXIvyKSrjANBgkqhkiG9w0BAQsFADBn\r\n    MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3\r\n    d3cuZGlnaWNlcnQuY29tMSYwJAYDVQQDEx1EaWdpQ2VydCBGZWRlcmF0ZWQgSUQg\r\n    Um9vdCBDQTAeFw0xMzAxMTUxMjAwMDBaFw0zMzAxMTUxMjAwMDBaMGcxCzAJBgNV\r\n    BAYTAlVTMRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdp\r\n    Y2VydC5jb20xJjAkBgNVBAMTHURpZ2lDZXJ0IEZlZGVyYXRlZCBJRCBSb290IENB\r\n    MIIBIjANBgkqhkiG9w0BAQE [...]
                  }
                ],
                "vpn_auth_types": [
                  "Certificate"
                ],
                "vpn_client_protocols": [
                  "IkeV2",
                  "OpenVPN"
                ]
              }
            ],
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.vpnpubip",
            "azurerm_resource_group.rghubnetworking",
            "azurerm_subnet.gatewaysubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}